--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -3,9 +3,10 @@
 	--baseGreen:#abda58;
 	--grey9:#999999;
 	--grey6:#666666;
+	--backlg:linear-gradient(to right,#abda58, #589f96);;
 }
 .red{
-	color: red;
+	color: #d91a1a;
 }
 .lightGrey{
 	color: var(--grey9);
